# cpp-ray-tracer

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
headers/: camera.h  color.h  diffuse-material.h  emissive-material.h  hit.h  image.h  interval.h  light.h  material.h  metallic-material.h  object.h  plane.h  point3.h  ppm-encoder.h  ray-tracer.h  ray.h  renderer.h  scene.h  sphere.h  utility.h  vector3.h
src/: camera.cpp  color.cpp  diffuse-material.cpp  emissive-material.cpp  hit.cpp  image.cpp  interval.cpp  light.cpp  main.cpp  material.cpp  metallic-material.cpp  object.cpp  plane.cpp  point3.cpp  ppm-encoder.cpp  ray.cpp  renderer.cpp  scene.cpp  sphere.cpp  utility.cpp  vector3.cpp
